# CoppeliaSimAgent

./: .gitignore  README.md  main.py  pyproject.toml
docs/: work.md
scripts/: download_sim_macos.sh  run_sim_macos.sh
skills/: SKILLS.md  toolcli.py
src/coppeliasimagent/: __init__.py  config.py
src/coppeliasimagent/agent/: __init__.py  mcp_backend.py  tool_registry.py
src/coppeliasimagent/cli/: __init__.py  chat.py  toolcli.py
src/coppeliasimagent/core/: __init__.py  connection.py  exceptions.py
src/coppeliasimagent/prompts/: __init__.py  agent_system_prompt.md
src/coppeliasimagent/servers/: __init__.py  mcp_server.py
src/coppeliasimagent/tools/: __init__.py  diagnostics.py  dynamics.py  grasp.py  kinematics.py  models.py  point_cloud.py  primitives.py  runtime.py  scene.py  schemas.py  sensors.py  simulation.py  task_skills.py  trajectory.py  verification.py
test/: live_task_abb_joint_trajectory.py  live_task_point_cloud_polishing.py  live_task_push_close_jar.py  live_tool_check_collision.py  live_tool_common.py  live_tool_duplicate_object.py  live_tool_find_objects.py  live_tool_load_robot_model.py  live_tool_move_red_cuboid.py  live_tool_remove_red_cuboid.py  live_tool_rename_object.py  live_tool_set_object_color.py  live_tool_spawn_red_cuboid.py
tests/: Connect2Sim.py  __init__.py  connect_to_sim.py  live_tool_common.py  live_tool_load_robot_model.py  live_tool_move_red_cuboid.py  live_tool_remove_red_cuboid.py  live_tool_scene_graph.py  live_tool_set_parent_child.py  live_tool_spawn_red_cuboid.py  test_connection.py  test_prompts.py  test_tool_registry.py  test_toolcli.py  test_tools.py
