[project]
name = "coppeliasimagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cbor2>=5.9.0",
    "click>=8.3.1",
    "coppeliasim-zmqremoteapi-client>=2.0.4",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pyzmq>=27.1.0",
    "scipy>=1.17.1",
]

[tool.setuptools.packages.find]
where = ["src"] 

[tool.setuptools.package-dir]
"" = "src" 


[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
